--- a/app/templates/posts/edit.hbs
+++ b/app/templates/posts/edit.hbs
@@ -1,4 +1,4 @@
-<h3>Edycja wpisu</h3>
+<h3>Edit</h3>
 <p>{{input value=model.title}}</p>
 <p>{{textarea value=model.body}}</p>
 <div>{{model.createdAt}}</div>
