--- a/app/templates/posts/index.hbs
+++ b/app/templates/posts/index.hbs
@@ -1,5 +1,7 @@
 <ul>
 {{#each model as |post|}}
-  <li>{{post.title}} -- {{post.body}}</li>
+  <li>
+    {{#link-to "posts.show" post}}{{post.title}}{{/link-to}} {{#link-to "posts.edit" post}}(edit){{/link-to}} -- {{post.body}} -- {{post.createdAt}}
+  </li>
 {{/each}}
 </ul>
