--- a/app/templates/posts/show.hbs
+++ b/app/templates/posts/show.hbs
@@ -1,3 +1,8 @@
 <h3>{{model.title}}</h3>
 <p>{{model.body}}</p>
 <div>{{model.createdAt}}</div>
+<ul>
+{{#each model.comments as |comment|}}
+  <li>{{comment.body}} @ {{comment.createdAt}}</li>
+{{/each}}
+</ul>
