--- a/app/templates/posts/index.hbs
+++ b/app/templates/posts/index.hbs
@@ -1,7 +1,36 @@
-<ul>
-{{#each model as |post|}}
-  <li>
-    {{#link-to "posts.show" post}}{{post.title}}{{/link-to}} {{#link-to "posts.edit" post}}(edit){{/link-to}} -- {{post.body}} -- {{post.createdAt}}
-  </li>
-{{/each}}
-</ul>
+<div class="container">
+  <div class="row">
+    <div class="col-md-10">
+      <div id="postlist">
+        {{#each model as |post|}}
+          <div class="panel">
+            <div class="panel-heading">
+                <div class="text-center">
+                    <div class="row">
+                        <div class="col-sm-9">
+                          <h3 class="pull-left">
+                            {{#link-to "posts.show" post}}{{post.title}}{{/link-to}}
+                          </h3>
+                        </div>
+                        <div class="col-sm-3">
+                          <h4 class="pull-right">
+                            <small><em>{{post.createdAt}}</em></small>
+                          </h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="panel-body">
+              {{post.body}}
+              {{#link-to "posts.show" post}}more{{/link-to}}
+            </div>
+
+            <div class="panel-footer">
+              Comments({{post.comments.length }})
+            </div>
+          </div>
+        {{/each}}
+      </div>
+    </div>
+  </div>
+</div>
