--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,22 +1,2 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">Roadblog</a>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li>{{#link-to "posts.index"}}Posts{{/link-to}}</li>
-        <li>{{#link-to "sign-in"}}Sign-in{{/link-to}}</li>
-        <li>{{#link-to "sign-out"}}Sign-out{{/link-to}}</li>
-      </ul>
-    </div>
-  </div>
-</nav>
+{{partial 'navbar'}}
 {{outlet}}
