nav-link-to component

--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -12,9 +12,9 @@
 
     <div class="collapse navbar-collapse" id="main-navbar">
       <ul class="nav navbar-nav">
-        {{#link-to "posts.index" tagName="li"}}<a href>Posts</a>{{/link-to}}
-        {{#link-to "sign-in" tagName="li"}}<a href>Sign-in</a>{{/link-to}}
-        {{#link-to "sign-out" tagName="li"}}<a href>Sign-out</a>{{/link-to}}
+        {{#nav-link-to 'posts.index'}}Posts{{/nav-link-to}}
+        {{#nav-link-to 'sign-in'}}Sign-in{{/nav-link-to}}
+        {{#nav-link-to 'sign-out'}}Sign-out{{/nav-link-to}}
       </ul>
     </div>
   </div>
