admin page displaying models counts

--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -16,6 +16,10 @@
         {{#nav-link-to 'sign-in'}}Sign-in{{/nav-link-to}}
         {{#nav-link-to 'sign-out'}}Sign-out{{/nav-link-to}}
       </ul>
+
+      <ul class="nav navbar-nav navbar-right">
+        {{#nav-link-to 'admin.seeder'}}Seeder{{/nav-link-to}}
+      </ul>
     </div>
   </div>
 </nav>
