--- a/app/templates/admin/seeder.hbs
+++ b/app/templates/admin/seeder.hbs
@@ -4,3 +4,12 @@
   <div class="col-md-4">{{number-box title="Posts" number=posts.length}}</div>
   <div class="col-md-4">{{number-box title="Comments" number=comments.length}}</div>
 </div>
+
+{{seeder-block
+    sectionTitle='Posts'
+    counter=postsCounter
+    generateAction='generatePosts'
+    deleteAction='deletePosts'
+    createReady=libDone
+    deleteReady=libDelDone
+}}
